# flask-photo

camera_server/: .env  Pipfile  README.md  app.py  mp_app.py  pyproject.toml  setup.sh
manager_server/backend/: app.py
manager_server/frontend/: package-lock.json  package.json
manager_server/frontend/src/: App.js  App.scss
