[tool.poetry]
name = "camera_server"
version = "0.1.0"
description = ""
authors = ["Andre Telfer <andretelfer@cmail.carleton.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
